[project]
name = "stable-ssl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3.0",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "wandb>=0.25.0",
]
